@@ -102,6 +102,7 @@
 "Edit alarm":"Wecker bearbeiten",
 "Edit favorite":"Favorit bearbeiten",
 "Edit group player":"Geräte-Gruppe bearbeiten",
+"Empty":"Leer",
 "Enable alarm fuctionality.":"Weckerfunktion aktivieren",
 "Enable alarms":"Wecker aktivieren",
 "Enable keyboard shortcuts":"Tastaturkürzel aktivieren",
