@@ -101,6 +101,7 @@
 "Edit alarm":"Modifier l'alarme",
 "Edit favorite":"Modifier le favori",
 "Edit group player":"Modifier le groupe de platines",
+"Empty":"Vide",
 "Enable alarm fuctionality.":"Activer la fonctionnalité d'alarme.",
 "Enable alarms":"Activer les alarmes",
 "Enable keyboard shortcuts":"Activer les raccourcis clavier",
