@@ -79,6 +79,7 @@
 "Edit alarm":"Modifca allarme",
 "Edit favorite":"Modifica Preferito",
 "Edit group player":"Modifica gruppo di riproduzione",
+"Empty":"Svuota",
 "Enable alarm fuctionality.":"Abilita funzionalità allarme",
 "Enable alarms":"Abilita allarmi",
 "Expand now playing":"Espandere In Riproduzione",
