@@ -103,6 +103,7 @@
 "Edit alarm":"Wekker aanpassen",
 "Edit favorite":"Aanpassen favoriet",
 "Edit group player":"Aanpassen groep speler",
+"Empty":"Leeg",
 "Enable alarm fuctionality.":"Wekker functionaliteit aanzetten",
 "Enable alarms":"Wekkers aanzetten",
 "Enable keyboard shortcuts":"Sneltoetsen inschakelen",
