@@ -103,6 +103,7 @@
 "Edit alarm":"Редактировать оповещение",
 "Edit favorite":"Редактировать избранное",
 "Edit group player":"Редактировать группу проигрывателей",
+"Empty":"Очистить",
 "Enable alarm fuctionality.":"Включить функцию оповещения",
 "Enable alarms":"Включить оповещения",
 "Enable keyboard shortcuts":"Включить сочетания клавиш",
