@@ -4,7 +4,8 @@
    (Issue #213)
 2. Serve web-app manifest as application/manifest+json
 3. Fix setting of volume step.
-4. Add toolti pto 'Stop' button.
+4. Add tooltip to 'Stop' button.
+5. Don't show notification with 'Empty'
 
 1.3.0
 -----
